18309
{code}
22:08 ~/Projects/Master (master)$ scala
Welcome to Scala version 2.11.0-20130603-110850-69887ddd68 (Java HotSpot(TM) 64-Bit Server VM, Java 1.7.0_12-ea).
Type in expressions to have them evaluated.
Type :help for more information.

scala> object Foo { def unapply(x: Int): Boolean = x == 2 }
defined object Foo

scala> 2 match { case Foo(_) => ??? }
<console>:31: error: result type Boolean of unapply defined in method unapply in object Foo does not conform to Option[_] or Boolean
              2 match { case Foo(_) => ??? }
                                 ^
{code}
